@@ -17,3 +17,4 @@ exports.azubu      = require("./providers/azubu");
 exports.beam       = require("./providers/beam");
 exports.picarto    = require("./providers/picarto");
 exports.gamingtv   = require("./providers/gamingtv");
+exports.newlivestream = require("./providers/new-livestream");
