@@ -3,6 +3,8 @@
  * Licensed under MPL 2.0
  */
 
+//TODO implement favorites stuff
+
 "use strict";
 const { Class: newClass } = require("sdk/core/heritage");
 const { emit } = require("sdk/event/core");
