@@ -28,6 +28,7 @@ provider_azubu=Azubu
 provider_beam=Beam
 provider_picarto=Picarto.TV
 provider_gamingtv=GamingTV
+provider_newlivestream=New Livestream
 
 provider_twitch_hosted=%s hosting %s
 provider_picarto_multistream=Multistream
